# Blip

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.3.md  blip.py  blip_browse.py  blip_search.py  cogstash.py  cogstash_browse.py  cogstash_cli.py  cogstash_search.py  conftest.py  pyproject.toml  requirements.txt  test_blip.py  test_blip_browse.py  test_blip_search.py  test_cogstash.py  test_cogstash_browse.py  test_cogstash_cli.py  test_cogstash_search.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-26-recall-review.md  2026-03-26-reliability-polish.md  2026-03-26-rename-cogstash.md  2026-03-27-cli-commands.md  2026-03-27-custom-tags-and-add.md  2026-03-27-edit-delete.md  2026-03-27-export-stats-config.md  2026-03-28-ci-restructure.md  2026-03-28-pyinstaller-packaging.md  2026-03-28-wizard-settings.md  2026-04-03-cli-ui-split.md  2026-04-12-browse-filter-clarity.md  2026-04-12-cli-help-examples.md  2026-04-12-hotkey-failure-feedback.md  2026-04-22-ui-queue-thread-lifecycle.md  2026-04-22-windows-responsibility-boundaries.md  2026-04-22-wrapper-boundaries-and-direct-imports.md  2026-04-23-build-installer-artifact-contracts.md  2026-04-23-shared-tag-counting.md  2026-04-24-export-failure-handling.md  2026-04-24-json-serialization.md  2026-04-25-note-mutation-result-contracts.md  2026-04-25-ui-app-decomposition.md  2026-06-24-capture-experience.md
docs/superpowers/specs/: 2026-03-26-recall-review-design.md  2026-03-26-reliability-polish-design.md  2026-03-27-cli-commands-design.md  2026-03-27-custom-tags-and-add-design.md  2026-03-27-edit-delete-design.md  2026-03-27-export-stats-config.md  (+19 more)
installer/windows/: CogStash.iss
scripts/: _artifacts.py  build.py  build_installer.py
src/cogstash/: __init__.py  __main__.py  _output.py  _windows.py  app.py  browse.py  cli.py  cli_legacy.py  search.py  settings.py
src/cogstash/cli/: main.py  (+4 more)
tests/: _helpers.py  conftest.py  test_app.py  test_browse.py  test_build_installer.py  test_cli.py  test_search.py  test_settings.py
tests/cli/: test_cli.py  test_import_boundary.py  test_main.py
tests/core/: test_config.py  test_notes.py  test_output.py  test_search.py
tests/ui/: __init__.py  _support.py  conftest.py  test_app.py  test_app_compat.py  test_app_runtime.py  test_browse.py  test_browse_extended.py  test_settings.py  test_settings_extended.py
(+14 files in other folders)
