[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cogstash"
version = "0.1.0"
description = "A global hotkey brain dump — press, type, gone."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynput>=1.7",
    "pystray>=0.19",
    "Pillow>=9.0",
]

[tool.setuptools]
py-modules = ["cogstash", "cogstash_search", "cogstash_browse"]
[project.scripts]
cogstash = "cogstash:main"
