[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cogstash"
dynamic = ["version"]
description = "A global hotkey brain dump — press, type, gone."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynput>=1.7",
    "pystray>=0.19",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.10", "setuptools-scm>=8", "pyinstaller>=6.0", "pytest-timeout>=2.0"]

[project.scripts]
cogstash = "cogstash.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # long formatted strings in CLI output

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools_scm]
